syntax = "proto3";

option java_package = "javagrpc";

message Ingredient{
      string name = 1;
}


message IngredientData
{
    map<string, int64> data = 1;
}

message VendorIngredientMap{
	map <string, IngredientData> vendorIngredientMap = 1;
}